--- a/pags/GiteGitHub.html
+++ b/pags/GiteGitHub.html
@@ -67,7 +67,7 @@
                   color: #fff;
                 }
               </style>
-               <a href="../Introducao.html"><li style="color: white;">Home</li></a>
+               <a href="../index.html"><li style="color: white;">Home</li></a>
       </header>
 
  
