--- a/pags/GitHubPages.html
+++ b/pags/GitHubPages.html
@@ -66,7 +66,7 @@
             }
           </style>
 
-<a href="../Introducao.html"><li style="color: white;">Home</li></a>
+<a href="../index.html"><li style="color: white;">Home</li></a>
 
 
   </header>
