--- a/pags/Hospedagem.html
+++ b/pags/Hospedagem.html
@@ -69,7 +69,7 @@
               color: #fff;
             }
           </style>
-           <a href="../Introducao.html"><li style="color: white;">Home</li></a>
+           <a href="../index.html"><li style="color: white;">Home</li></a>
   </header>
 
   <main>
